--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "prettier"
   ],
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "bigchaindb-driver": "^4.3.0",
     "bip39": "^3.0.4",
@@ -69,6 +72,8 @@
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
+    "nodemailer-express-handlebars": "^6.0.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
